style.css
* {box-sizing: border-box}
[hidden] {display: none !important}
[disabled] {pointer-events:none; opacity: 0.3}

body {
  --background: #f2f4f6;
  --primary_light: #f582ae;
  --secondary_light: #ffd803;
  --tertiary_light: #00ebc7;
  --primary_dark: #232946;
  --spacing: 14px;
  --spacing-m: 28px;

  width: 100vw;
  height: 100vh;
  overflow: hidden;
  margin: 0;
  background: var(--background);
  color: var(--primary_dark);
  font-family: 'Work Sans', sans-serif;
}

/*
 * Main layout.
 */
h1 {
  text-align: center;
  position: relative;
  font-weight: 900;
  font-size: 60px;
  letter-spacing: 4px;
}
.vertical {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
}
.horizontal {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.box {
  position: relative;
  background: white;
  padding: var(--spacing) var(--spacing-m);
  margin: 200px auto;
  margin-bottom: 0;
  height: 200px;
  border-radius: var(--spacing);
  box-shadow: 0 30px 56px 6px rgba(0, 0, 0, 0.1);
}

/*
 * Album art.
 */
.album {
  position: relative;
  margin-right: var(--spacing-m);
}
.album.rotating {
  animation: rotate infinite 15s linear;
}
@keyframes rotate {
  from { transform: rotate(0) }
  to   { transform: rotate(360deg) }
}
.album canvas {
  border: 10px solid white;
  border-radius: var(--spacing);
  border-radius: 50%;
}

/*
 * Current song information.
 */
.song-title {
  font-size: 18px;
  font-weight: 900;
  margin: var(--spacing) 0;
  letter-spacing: 2px;
}
.progress {
  width: 100%;
}
.current-time, .total-time {
  font-size: 12px;
}
progress {
  -webkit-appearance: none;
  border: none;
  box-shadow: none;
  height: 4px;
  width: 100%;
}
/* Background. */
progress::-webkit-progress-bar {
  background:var(--background);
  border: none;
  box-shadow: none;
}
/* Value. */
progress::-webkit-progress-value {
  border: none;
  box-shadow: none;
  background: var(--primary_dark);
}

/*
 * Play controls.
 */
.controls {
  position: relative;
  width: 400px;
  margin: var(--spacing-m) 0;
}
button {
  display:block;
  color: var(--primary_dark);
  background: transparent;
  border: none;
  border-radius: 50%;
  cursor: pointer;
  transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
  margin: 0;
  padding: 0;
  font-weight: bold;
  font-family: inherit;
  font-size: inherit;
}
button:hover {
  color: var(--primary_light);
}
button svg {
  pointer-events: none;
  fill: currentColor;
  width: 40px;
  height: 40px;
  margin: 0 auto;
}
button.active > svg.yes,
button:not(.active) > svg.no {
  display: block;
}
button:not(.active) > svg.yes,
button.active > svg.no {
  display: none;
}
#btnPlayForever.active,
#btnFave.active,
#btnPlaylist.active {
  color: var(--tertiary_light);
}

/*
 * Playlist.
 */
.playlist {
  position: absolute;
  background: white;
  border-radius: var(--spacing);
  height: 0;
  right: 0;
  top: calc(200px - 20px);  /* this is the same as the height set in .box and spacing*/
  left: 300px; /* width of canvas + a bit */
  padding: var(--spacing-m);
  visibility: hidden;
  transition: height 0.2s ease-in-out, visibility 0.2s ease-in-out;
}
.playlist.showing {
  height: 300px;
  visibility: visible;
  transition: height 0.2s ease-in-out, visibility 0.2s ease-in-out;
  overflow: auto;
}
.playlist ul {
  display: none;
  margin: 0;
  padding: 0;
  list-style-type: none;
}
.playlist.showing ul {
  display: block;
}
.playlist ul li {
  padding: var(--spacing) var(--spacing-m);
  cursor: pointer;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.playlist ul li:hover {
  background: var(--background);
}
/*
 * Bottom waves.
 */
.waves {
  position: absolute;
  bottom: 0;
  width: 100vw;
  z-index: -2;
  fill-opacity: 0.5;
}
.waves > svg > path:first-of-type {
  fill: var(--primary_light);
}
.waves > svg > path:last-of-type {
  fill: var(--tertiary_light);
}

/*
 * Small screens.
 */
@media only screen and (max-width: 600px)  {
  .box {
    flex-direction: column;
    height: 300px;
  }
  canvas {
    width: 200px !important;
    height: 200px !important;
  }
  .album {
    margin-top: -100px;
    margin-right: 0;
  }
  .controls {
    width: 70vw;
  }
}

